# Sync_Plex

./: .env.example  .gitignore  README.md  pyproject.toml  pyrightconfig.json  sync_config.json
archive/: sheet_ids.env
backends/python/: Dockerfile  pyproject.toml  pyrightconfig.json
backends/python/drive_sync/: plex_api_wrapper.py  plex_scraper.py
backends/python/engine/: cli.py  config.py  inventory.py  models.py  sync_jobs.py
backends/python/engine/media/: aggregation.py  cli.py  config.py  health.py  models.py  requests.py
backends/python/engine/media/clients/: __init__.py  arr_base.py  plex.py  radarr.py  sonarr.py
backends/python/engine/media/tui/: app.py
backends/python/engine/web/: app.py  auth.py  users.py  users_cli.py
backends/python/tests/: test_cli.py  test_health.py  test_inventory.py  test_media.py  test_requests.py  test_sync_jobs.py  test_users.py
cli/: syncplex  syncplex-drive-sync
deploy/: compose.elitedesk.yaml
notebooks/: config_notebooks.py  test.ipynb
src/: config.py  plex_api_wrapper.py  plex_scraper.py  selective_sync.py
src/utils/: android_tools.py  config_utils.py  display_tools.py
