[project]
name = "syncplex"
version = "0.1.0"
description = "Sync_Plex media remote — multi-instance Sonarr/Radarr/Plex search/status/add"
requires-python = ">=3.14"
dependencies = [
    "typer>=0.12",
    "httpx>=0.28.1",
    "pydantic>=2.13.4",
    "python-dotenv>=1.2.2",
    "textual>=8.2.8",
    "nicegui>=3.14.0",
    "argon2-cffi>=25.1.0",
]

[project.scripts]
syncplex = "engine.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["engine"]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E203"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "ruff>=0.11",
]
