[project]
name = "syncplex"
version = "0.1.0"
description = "Sync_Plex media remote — multi-instance Sonarr/Radarr/Plex search/status/add"
requires-python = ">=3.14"
dependencies = [
    "typer>=0.12",
    "httpx>=0.28.1",
    "pydantic>=2.13.4",
    "python-dotenv>=1.2.2",
    "textual>=8.2.8",
    "nicegui>=3.14.0",
    "argon2-cffi>=25.1.0",
]

[project.scripts]
syncplex = "engine.cli:app"
syncplex-drive-sync = "drive_sync.plex_scraper:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["engine", "drive_sync"]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E203"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "ruff>=0.11",
]
# drive-sync deps live in a group (not project.dependencies) so the Docker
# image stays lean — the web container never imports drive_sync, and pandas
# et al. are the heaviest packages in the tree. Local `uv sync` installs them
# via default-groups; the Dockerfile syncs with --no-default-groups.
drive-sync = [
    "pandas>=2.2.3",
    "pyyaml>=6.0.2",
    "readable-utils",
    "requests>=2.32.3",
]

[tool.uv]
default-groups = ["dev", "drive-sync"]

[tool.uv.sources]
readable-utils = { git = "https://github.com/ReadableCode/readable_utils.git", tag = "v0.1.2" }
